--- a/app/src/main/res/layout/activity_assessment_details.xml
+++ b/app/src/main/res/layout/activity_assessment_details.xml
@@ -7,7 +7,7 @@
   android:paddingLeft="@dimen/activity_horizontal_margin"
   android:paddingRight="@dimen/activity_horizontal_margin"
   android:paddingTop="@dimen/activity_vertical_margin"
-  tools:context="com.example.sirjackovich.wguapp.AssessmentDetailsActivity">
+  tools:context="com.example.sirjackovich.wguapp.assessments.AssessmentDetailsActivity">
 
 
   <GridLayout
@@ -50,8 +50,7 @@
     <EditText
       android:id="@+id/title_edit_text"
       android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="Title" />
+      android:layout_height="wrap_content" />
 
     <TextView
       android:id="@+id/due_date_text_view"
@@ -65,17 +64,11 @@
 
     <EditText
       android:id="@+id/due_date_edit_text"
-      android:layout_width="0dp"
+      android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginBottom="8dp"
-      android:layout_marginEnd="8dp"
-      android:layout_marginLeft="8dp"
-      android:layout_marginRight="8dp"
-      android:layout_marginStart="8dp"
-      android:layout_marginTop="8dp"
-      android:ems="10"
       android:hint="@string/date_placeholder"
-      android:inputType="date" />
+      android:inputType="date"
+      android:text="@string/date_placeholder" />
 
     <Button
       android:id="@+id/delete_button"
