--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,5 +44,18 @@
       android:layout_marginTop="8dp"
       android:onClick="showMentors"
       android:text="@string/mentors_text" />
+
+    <Button
+      android:id="@+id/courses_button"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginBottom="8dp"
+      android:layout_marginEnd="8dp"
+      android:layout_marginLeft="8dp"
+      android:layout_marginRight="8dp"
+      android:layout_marginStart="8dp"
+      android:layout_marginTop="8dp"
+      android:onClick="showCourses"
+      android:text="@string/courses_text" />
   </LinearLayout>
 </RelativeLayout>
