--- a/app/src/main/res/layout/activity_mentor_details.xml
+++ b/app/src/main/res/layout/activity_mentor_details.xml
@@ -1,73 +1,139 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:paddingBottom="@dimen/activity_vertical_margin"
-android:paddingLeft="@dimen/activity_horizontal_margin"
-android:paddingRight="@dimen/activity_horizontal_margin"
-android:paddingTop="@dimen/activity_vertical_margin"
-tools:context="com.example.sirjackovich.wguapp.mentors.MentorDetailsActivity">
-
-
-<GridLayout
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  android:columnCount="2"
-  android:rowCount="4">
+  android:orientation="vertical"
+  android:paddingBottom="@dimen/activity_vertical_margin"
+  android:paddingLeft="@dimen/activity_horizontal_margin"
+  android:paddingRight="@dimen/activity_horizontal_margin"
+  android:paddingTop="@dimen/activity_vertical_margin"
+  tools:context="com.example.sirjackovich.wguapp.mentors.MentorDetailsActivity">
 
-  <TextView
-    android:id="@+id/name_text_view"
-    android:layout_width="wrap_content"
+
+  <LinearLayout
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:text="@string/name_text" />
+    android:baselineAligned="false"
+    android:orientation="horizontal">
 
-  <EditText
-    android:id="@+id/name_edit_text"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content" />
+    <RelativeLayout
+      android:layout_width="0dp"
+      android:layout_height="match_parent"
+      android:layout_weight="1">
 
-  <TextView
-    android:id="@+id/phone_text_view"
-    android:layout_width="wrap_content"
+      <TextView
+        android:id="@+id/name_text_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/name_text" />
+    </RelativeLayout>
+
+    <RelativeLayout
+      android:layout_width="0dp"
+      android:layout_height="match_parent"
+      android:layout_weight="1">
+
+      <EditText
+        android:id="@+id/name_edit_text"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName" />
+    </RelativeLayout>
+  </LinearLayout>
+
+  <LinearLayout
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:text="@string/phone_text" />
+    android:baselineAligned="false"
+    android:orientation="horizontal">
 
-  <EditText
-    android:id="@+id/phone_edit_text"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content" />
+    <RelativeLayout
+      android:layout_width="0dp"
+      android:layout_height="match_parent"
+      android:layout_weight="1">
 
-  <TextView
-    android:id="@+id/email_text_view"
-    android:layout_width="wrap_content"
+      <TextView
+        android:id="@+id/phone_text_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/phone_text" />
+    </RelativeLayout>
+
+    <RelativeLayout
+      android:layout_width="0dp"
+      android:layout_height="match_parent"
+      android:layout_weight="1">
+
+      <EditText
+        android:id="@+id/phone_edit_text"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:inputType="phone" />
+    </RelativeLayout>
+  </LinearLayout>
+
+  <LinearLayout
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:text="@string/email_text" />
+    android:baselineAligned="false"
+    android:orientation="horizontal">
 
-  <EditText
-    android:id="@+id/email_edit_text"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content" />
+    <RelativeLayout
+      android:layout_width="0dp"
+      android:layout_height="match_parent"
+      android:layout_weight="1">
 
-  <Button
-    android:id="@+id/delete_button"
-    android:layout_width="wrap_content"
+      <TextView
+        android:id="@+id/email_text_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/email_text" />
+    </RelativeLayout>
+
+    <RelativeLayout
+      android:layout_width="0dp"
+      android:layout_height="match_parent"
+      android:layout_weight="1">
+
+      <EditText
+        android:id="@+id/email_edit_text"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textEmailAddress" />
+    </RelativeLayout>
+  </LinearLayout>
+
+  <LinearLayout
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="8dp"
-    android:layout_marginLeft="8dp"
-    android:layout_marginStart="8dp"
-    android:onClick="handleDelete"
-    android:text="@string/delete_text" />
+    android:baselineAligned="false"
+    android:orientation="horizontal">
 
-  <Button
-    android:id="@+id/save_button"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="8dp"
-    android:layout_marginEnd="8dp"
-    android:layout_marginRight="8dp"
-    android:onClick="handleSave"
-    android:text="@string/save_text" />
-</GridLayout>
+    <RelativeLayout
+      android:layout_width="0dp"
+      android:layout_height="match_parent"
+      android:layout_weight="1">
 
-</RelativeLayout>
+      <Button
+        android:id="@+id/delete_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="handleDelete"
+        android:text="@string/delete_text" />
+    </RelativeLayout>
+
+    <RelativeLayout
+      android:layout_width="0dp"
+      android:layout_height="match_parent"
+      android:layout_weight="1">
+
+      <Button
+        android:id="@+id/save_button"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:onClick="handleSave"
+        android:text="@string/save_text" />
+    </RelativeLayout>
+  </LinearLayout>
+</LinearLayout>
