--- a/app/src/main/res/layout/activity_course_details.xml
+++ b/app/src/main/res/layout/activity_course_details.xml
@@ -168,7 +168,20 @@
 
   <LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="wrap_content"
+    android:baselineAligned="false"
+    android:orientation="horizontal">
+    <TextView
+      android:id="@+id/mentors_text_view"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:text="@string/mentors_text" />
+
+  </LinearLayout>
+
+  <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="60dp"
     android:baselineAligned="false"
     android:orientation="horizontal">
 
@@ -181,7 +194,20 @@
 
   <LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="wrap_content"
+    android:baselineAligned="false"
+    android:orientation="horizontal">
+    <TextView
+      android:id="@+id/assessments_text_view"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:text="@string/assessments_text" />
+
+  </LinearLayout>
+
+  <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="60dp"
     android:baselineAligned="false"
     android:orientation="horizontal">
 
