--- a/app/src/main/res/layout/activity_course_details.xml
+++ b/app/src/main/res/layout/activity_course_details.xml
@@ -164,6 +164,19 @@
         android:layout_height="wrap_content"
         android:inputType="text" />
     </RelativeLayout>
+
+    <RelativeLayout
+      android:layout_width="0dp"
+      android:layout_height="match_parent"
+      android:layout_weight="1">
+
+      <Button
+        android:id="@+id/share_button"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:onClick="shareNote"
+        android:text="@string/share_text" />
+    </RelativeLayout>
   </LinearLayout>
 
   <LinearLayout
